synced up Neilsen with play events. adTimeline fixes to better support adTracking binding without clearing out bindings in source swiches
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@3089 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/AdVastDoubleClickCompanion.qunit.html
+++ b/modules/KalturaSupport/tests/AdVastDoubleClickCompanion.qunit.html
@@ -84,8 +84,8 @@ function jsKalturaPlayerTest( videoId ){
       	prerollInterval="1" 
       	prerollStartWith="1" 
       	prerollUrl="http://ad.doubleclick.net/pfadx/AngelaSite;kw=html5linearnonlinear;sz=300x300;ord=5036130;dcmt=text/xml" 
-      	preSequence="1" t
-      	imeout="4" 
+      	preSequence="1"
+      	timeout="4" 
       	htmlCompanions="testCompanion:300:250;testLongCompanion:728:90;"
       />
       
