--- a/modules/NielsenPlugin/tests/IntegrationVastNielsen.html
+++ b/modules/NielsenPlugin/tests/IntegrationVastNielsen.html
@@ -44,14 +44,14 @@ function jsKalturaPlayerTest( videoId ){
 <object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" 
 allowNetworking="all" allowScriptAccess="always" height="333" width="400" xmlns:dc="http://purl.org/dc/terms/" 
 xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" 
-resource="http://www.kaltura.com/index.php/kwidget/cache_st/1292436450/wid/_243342/uiconf_id/6119791/entry_id/0_uka1msg4" 
-data="http://www.kaltura.com/index.php/kwidget/cache_st/1292436450/wid/_243342/uiconf_id/6119791/entry_id/0_uka1msg4">
+resource="http://www.kaltura.com/index.php/kwidget/cache_st/1292436452/wid/_243342/uiconf_id/6119791/entry_id/0_uka1msg4" 
+data="http://www.kaltura.com/index.php/kwidget/cache_st/1292436452/wid/_243342/uiconf_id/6119791/entry_id/0_uka1msg4">
 	<param name="allowFullScreen" value="true" />
 	<param name="allowNetworking" value="all" />
 	<param name="allowScriptAccess" value="always" />
 	<param name="bgcolor" value="#000000" />
 	<param name="flashVars" value="&" />
-	<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1292436450/wid/_243342/uiconf_id/6119791/entry_id/0_uka1msg4" />
+	<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1292436452/wid/_243342/uiconf_id/6119791/entry_id/0_uka1msg4" />
 </object>
 <!--
 
@@ -65,11 +65,11 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/1292436450/wid/_243342/u
       	numPreroll="1" 
       	prerollInterval="1" 
       	prerollStartWith="1" 
-      	prerollUrl="http://demo.tremormedia.com/proddev/vast/vast_wrapper_linear_1.xml" 
+      	prerollUrl="http://ad.doubleclick.net/pfadx/AngelaSite;kw=html5linearnonlinear;sz=300x300;ord=5036130;dcmt=text/xml"
       	numPostroll="1" 
       	postrollInterval="1" 
       	postrollStartWith="1" 
-      	postrollUrl="http://demo.tremormedia.com/proddev/vast/vast_wrapper_linear_1.xml" 
+      	postrollUrl="http://ad.doubleclick.net/pfadx/AngelaSite;kw=html5linearnonlinear;sz=300x300;ord=5036130;dcmt=text/xml"
       	preSequence="1" 
       	postSequence="1" 
       	timeout="4" 
@@ -97,6 +97,7 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/1292436450/wid/_243342/u
             <Button id="skipBtn" visible="{sequenceProxy.isAdSkip}" includeInLayout="{sequenceProxy.isAdSkip}" type="labelButton" color1="14540253" color2="16777215" styleName="controllerScreen" height="30" width="20" allowDisable="false" label="skip ad >" kClick="sendNotification('sequenceSkipNext')"/>
           </HBox>
         </VBox>
+        
         <Plugin id="gigya" width="100%" height="100%" loadingPolicy="noWait" shareEmailBody="Hi,&lt;br>I watched this video and thought you'd enjoy it too. &lt;br>$URL$ to watch.&lt;br> $sender$" shareEmailSubject="Take a look at this video"/>
         <VBox id="generalPluginContainer" width="100%" height="100%">
 
