--- a/modules/KalturaSupport/tests/jQuery1.3.2_Integration.html
+++ b/modules/KalturaSupport/tests/jQuery1.3.2_Integration.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>jQuery 1.3.2 Integration</title>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.js"></script>
 <script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 
 </head>
