--- a/modules/NielsenPlugin/tests/IntegrationFreeWheelNielsen.html
+++ b/modules/NielsenPlugin/tests/IntegrationFreeWheelNielsen.html
@@ -45,14 +45,14 @@ Freeshweel Ads:: Preroll, midroll at 10 seconds, postroll.<br>
 <object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" 
 allowNetworking="all" allowScriptAccess="always" height="333" width="400" xmlns:dc="http://purl.org/dc/terms/" 
 xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" 
-resource="http://www.kaltura.com/index.php/kwidget/cache_st/1292436454/wid/_243342/uiconf_id/6119791/entry_id/0_uka1msg4" 
-data="http://www.kaltura.com/index.php/kwidget/cache_st/1292436454/wid/_243342/uiconf_id/6119791/entry_id/0_uka1msg4">
+resource="http://www.kaltura.com/index.php/kwidget/cache_st/1292436455/wid/_243342/uiconf_id/6119791/entry_id/0_uka1msg4" 
+data="http://www.kaltura.com/index.php/kwidget/cache_st/1292436455/wid/_243342/uiconf_id/6119791/entry_id/0_uka1msg4">
 	<param name="allowFullScreen" value="true" />
 	<param name="allowNetworking" value="all" />
 	<param name="allowScriptAccess" value="always" />
 	<param name="bgcolor" value="#000000" />
 	<param name="flashVars" value="&" />
-	<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1292436454/wid/_243342/uiconf_id/6119791/entry_id/0_uka1msg4" />
+	<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1292436455/wid/_243342/uiconf_id/6119791/entry_id/0_uka1msg4" />
 </object>
 <!--
 
@@ -63,6 +63,8 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/1292436454/wid/_243342/u
       <Plugin id="statistics" width="0%" height="0%" includeInLayout="false"/>
       
       <Plugin id="FreeWheel" 
+      	path="http://projects.kaltura.com/MichalR/kdp/plugins/freeWheelPlugin.swf"
+      	extensions="kdpExtension=http://projects.kaltura.com/MichalR/kdp/plugins/freeWheelAnalyticsExtension.swf"
       	adManagerUrl="http://adm.fwmrm.net/p/release/latest-AS3/adm/dbg/AdManager.swf"
       	adManagerJsUrl="http://adm.fwmrm.net/p/release/latest-JS/adm/dbg/AdManager.js"
       	serverUrl="http://demo.v.fwmrm.net"
