--- a/modules/NielsenPlugin/tests/IntegrationFreeWheelNielsen.html
+++ b/modules/NielsenPlugin/tests/IntegrationFreeWheelNielsen.html
@@ -51,7 +51,7 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/1292436455/wid/_243342/u
 	<param name="allowNetworking" value="all" />
 	<param name="allowScriptAccess" value="always" />
 	<param name="bgcolor" value="#000000" />
-	<param name="flashVars" value="&useKalturaTemporalSlots=true" />
+	<param name="flashVars" value="&" />
 	<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1292436455/wid/_243342/uiconf_id/6119791/entry_id/0_uka1msg4" />
 </object>
 <!--
