--- a/modules/NielsenPlugin/tests/IntegrationFreeWheelNielsen.html
+++ b/modules/NielsenPlugin/tests/IntegrationFreeWheelNielsen.html
@@ -69,8 +69,8 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/1292436456/wid/_243342/u
       	adManagerJsUrl="http://adm.fwmrm.net/p/release/latest-JS/adm/dbg/AdManager.js"
       	serverUrl="http://demo.v.fwmrm.net"
       	networkId="176538"
-      	profileId="176538:KDP_Flash"
-      	profileIdHTML5="176538:KDP_HTML5"
+      	playerProfile="176538:KDP_Flash"
+      	playerProfileHTML5="176538:KDP_HTML5"
       	siteSectionId="defaultsection"
       	preSequence="1"
       	postSequence="1"
