--- a/modules/NielsenPlugin/tests/IntegrationFreeWheelNielsen.html
+++ b/modules/NielsenPlugin/tests/IntegrationFreeWheelNielsen.html
@@ -77,6 +77,7 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/1292436456/wid/_243342/u
       	useKalturaTemporalSlots="true"
       	videoAssetId="playerdefined"
       	videoAssetFallbackId="playerdefined"
+      	provider="freewheel"
       />
       
       <Plugin id="NielsenPlugin" 
