added support for grabbing plugin configuration on the parent page
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@3248 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/NielsenPlugin/tests/IntegrationFreeWheelNielsen.html
+++ b/modules/NielsenPlugin/tests/IntegrationFreeWheelNielsen.html
@@ -34,11 +34,20 @@ function jsKalturaPlayerTest( videoId ){
 	});
 }
 </script>
+<script> 
+	function jsCallbackReady( videoId ){
+		$('#evalTag').click(function(){
+			alert( $('#' + videoId ).get(0).evaluate( '{NielsenPlugin.tag_category}' ) );
+		})
+	}
+</script>
 <!-- qunit-kaltura must come after qunit-bootstrap.js and after mwEmbedLoader.php and after any jsCallbackReady stuff-->
 <script type="text/javascript" src="../../KalturaSupport/tests/resources/qunit-kaltura-bootstrap.js"></script>
+
 </head>
 <body>
 <h2> Integration FreeWheel Nielsen test </h2>
+<a href="#" id="evalTag"> Evaluate {NielsenPlugin.tag_category}</a> -- shows category for current asset. <br>
 Freeshweel Ads:: Preroll, midroll at 10 seconds, postroll.<br> 
 <a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
 <br />
