added freePreviewEnd notification
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@3255 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/AccessControlPreview.qunit.html
+++ b/modules/KalturaSupport/tests/AccessControlPreview.qunit.html
@@ -35,7 +35,7 @@ function jsKalturaPlayerTest( videoId ){
 		kdp.addJsListener( 'freePreviewEnd', 'onFreePreviewEnd' );
 	});
 	function onFreePreviewEnd(){
-		log('Event: freePreviewEnd' )'' 
+		log('Event: freePreviewEnd' );
 	}
  	function log( text ){
 		$('#previewLog').append( 
