--- a/modules/NielsenVideoCensusPlugin/tests/NielsenVideoCensusPlugin.html
+++ b/modules/NielsenVideoCensusPlugin/tests/NielsenVideoCensusPlugin.html
@@ -44,14 +44,14 @@ function jsKalturaPlayerTest( videoId ){
 <object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" 
 allowNetworking="all" allowScriptAccess="always" height="333" width="400" xmlns:dc="http://purl.org/dc/terms/" 
 xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" 
-resource="http://www.kaltura.com/index.php/kwidget/cache_st/12924364502/wid/_243342/uiconf_id/6384651/entry_id/0_uka1msg4" 
-data="http://www.kaltura.com/index.php/kwidget/cache_st/12924364502/wid/_243342/uiconf_id/6384651/entry_id/0_uka1msg4">
+resource="http://www.kaltura.com/index.php/kwidget/cache_st/12924364503/wid/_243342/uiconf_id/6384651/entry_id/0_uka1msg4" 
+data="http://www.kaltura.com/index.php/kwidget/cache_st/12924364503/wid/_243342/uiconf_id/6384651/entry_id/0_uka1msg4">
 	<param name="allowFullScreen" value="true" />
 	<param name="allowNetworking" value="all" />
 	<param name="allowScriptAccess" value="always" />
 	<param name="bgcolor" value="#000000" />
 	<param name="flashVars" value="&" />
-	<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/12924364502/wid/_243342/uiconf_id/6384651/entry_id/0_uka1msg4" />
+	<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/12924364503/wid/_243342/uiconf_id/6384651/entry_id/0_uka1msg4" />
 </object>
 <!--  uiConf used in above test: 
 
@@ -63,6 +63,7 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/12924364502/wid/_243342/
       
       <Plugin 
       	id="NielsenVideoCensusPlugin"
+      	path="http://projects.kaltura.com/nu/NielsenVideoCensusPlugin.swf"
       	clientId="us-300437"
       	videoCensusId="vc,c02"
       	tl="{mediaProxy.entry.name}"
