--- a/modules/NielsenVideoCensusPlugin/tests/LongFormNielsenVideoCensusPluginFreeWheel.html
+++ b/modules/NielsenVideoCensusPlugin/tests/LongFormNielsenVideoCensusPluginFreeWheel.html
@@ -41,7 +41,7 @@ function jsKalturaPlayerTest( videoId ){
 <h2> NielsenVideoCensusPlugin flash long form player test </h2>
 preroll freewheel,<br /> 
 overlay at 5 sec <br />
-freewheel midroll at 10 sec ( should send additional becon when resuming content playback ) <br /><br />
+freewheel midroll at 10 sec and 13 seconds ( should send additional becon when resuming content playback ) <br /><br />
 <a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
 <br />
 <object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" 
