added EnableFlavorSelector flag to disable FlavorSelector for this tag release while its not yet stable.
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@3365 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/FlavorSelector.html
+++ b/modules/KalturaSupport/tests/FlavorSelector.html
@@ -3,6 +3,9 @@
 <head>
 <title>Flavor Selector</title>
 <script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
+<script>
+	mw.setConfig('EmbedPlayer.EnableFlavorSelector', true);
+</script>
 </head>
 <body>
 <h2>Flavor Selector</h2>	
