working on percentReached event
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@3384 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/Disney/Statistics/tests/DOL_Statistics.html
+++ b/modules/Disney/Statistics/tests/DOL_Statistics.html
@@ -11,7 +11,7 @@ mw.setConfig('Kaltura.StatsServiceUrl', 'http://www.kaltura.co.cc' );
 
 var cto = {
 	trackVideo: function( data ) {
-		console.log('CTO:: trackVideo', data)
+		console.log('--- CTO:: trackVideo', data)
 	}
 };
 </script>
