--- a/modules/NielsenVideoCensusPlugin/tests/NielsenVideoCensusPlugin.html
+++ b/modules/NielsenVideoCensusPlugin/tests/NielsenVideoCensusPlugin.html
@@ -63,7 +63,7 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/12924364503/wid/_243342/
       
       <Plugin 
       	id="NielsenVideoCensusPlugin"
-      	path="http://projects.kaltura.com/nu/NielsenVideoCensusPlugin.swf"
+      	path="http://www.kaltura.com/content/uiconf/ps/abc/kdp3/v3.5.33/plugins/NielsenVideoCensusPlugin.swf"
       	clientId="us-300437"
       	videoCensusId="vc,c02"
       	tl="{mediaProxy.entry.name}"
