updated NielsenCombined and NielsenVideoCensus to lower case plugin ids
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@3409 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/NielsenCombined/tests/IntegrationFreeWheelNielsen.html
+++ b/modules/NielsenCombined/tests/IntegrationFreeWheelNielsen.html
@@ -71,7 +71,7 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/1292436456/wid/_243342/u
       <Plugin id="kalturaMix" width="0%" height="0%" includeInLayout="false" loadingPolicy="onDemand"/>
       <Plugin id="statistics" width="0%" height="0%" includeInLayout="false"/>
       
-      <Plugin id="FreeWheel" 
+      <Plugin id="freeWheel" 
       	path="http://projects.kaltura.com/MichalR/kdp/plugins/freeWheelPlugin.swf"
       	extensions="kdpExtension=http://projects.kaltura.com/MichalR/kdp/plugins/freeWheelAnalyticsExtension.swf"
       	adManagerUrl="http://adm.fwmrm.net/p/release/latest-AS3/adm/dbg/AdManager.swf"
@@ -89,7 +89,7 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/1292436456/wid/_243342/u
       	provider="freewheel"
       />
       
-      <Plugin id="NielsenCombined" 
+      <Plugin id="nielsenCombined" 
 	    clientid="kg-98765-1"
 	    path="http://projects.kaltura.com/mdale/NielsenPlugin.swf"
 	    relativeTo="PlayerHolder"
