--- a/modules/NielsenCombined/tests/IntegrationVastNielsen.html
+++ b/modules/NielsenCombined/tests/IntegrationVastNielsen.html
@@ -225,23 +225,23 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/1292436452/wid/_243342/u
     <var key="imageDefaultDuration" value="2"/>
     <var key="autoPlay" value="true"/>
     <var key="autoMute" value="false"/>
-    <var key="NielsenCombined.plugin" value="true" overrideFlashvar="true"/>
-    <var key="NielsenCombined.clientid" value="kg-98765-1" overrideFlashvar="true"/>
-    <var key="NielsenCombined.path" value="http://gg-dev.glanceguide.com/kaltura/NielsenCombined.swf" overrideFlashvar="true"/>
-    <var key="NielsenCombined.relativeTo" value="PlayerHolder" overrideFlashvar="true"/>
-    <var key="NielsenCombined.position" value="lastChild" overrideFlashvar="true"/>
+    <var key="nielsenCombined.plugin" value="true" overrideFlashvar="true"/>
+    <var key="nielsenCombined.clientid" value="kg-98765-1" overrideFlashvar="true"/>
+    <var key="nielsenCombined.path" value="http://gg-dev.glanceguide.com/kaltura/nielsenCombined.swf" overrideFlashvar="true"/>
+    <var key="nielsenCombined.relativeTo" value="PlayerHolder" overrideFlashvar="true"/>
+    <var key="nielsenCombined.position" value="lastChild" overrideFlashvar="true"/>
 
-    <var key="NielsenCombined.includeInLayout" value="false" overrideFlashvar="true"/>
-    <var key="NielsenCombined.tag_category" value="{mediaProxy.entry.categories}" overrideFlashvar="true"/>
-    <var key="NielsenCombined.tag_title" value="{mediaProxy.entry.name}" overrideFlashvar="true"/>
-    <var key="NielsenCombined.tag_xtag" value="{mediaProxy.entry.id}" overrideFlashvar="true"/>
+    <var key="nielsenCombined.includeInLayout" value="false" overrideFlashvar="true"/>
+    <var key="nielsenCombined.tag_category" value="{mediaProxy.entry.categories}" overrideFlashvar="true"/>
+    <var key="nielsenCombined.tag_title" value="{mediaProxy.entry.name}" overrideFlashvar="true"/>
+    <var key="nielsenCombined.tag_xtag" value="{mediaProxy.entry.id}" overrideFlashvar="true"/>
     <var key="requiredMetadataFields" value="true" overrideFlashvar="true"/>
-    <var key="NielsenCombined.prod" value="sc,iag" overrideFlashvar="true"/>
+    <var key="nielsenCombined.prod" value="sc,iag" overrideFlashvar="true"/>
     <var key="vast.path" value="http://gg-dev.glanceguide.com/kaltura/vastPlugin.swf" overrideFlashvar="true"/>
-    <var key="NielsenCombined.ad_title" value="{sequenceProxy.activePluginMetadata.title}" overrideFlashvar="true"/>
-    <var key="NielsenCombined.allowedAdTypes" value="midroll, brandslate, interactive" overrideFlashvar="true"/>
+    <var key="nielsenCombined.ad_title" value="{sequenceProxy.activePluginMetadata.title}" overrideFlashvar="true"/>
+    <var key="nielsenCombined.allowedAdTypes" value="midroll, brandslate, interactive" overrideFlashvar="true"/>
 
-    <var key="NielsenCombined.ad_iag_epi" value="{mediaProxy.entry.categories} - {mediaProxy.entry.name}" overrideFlashvar="true"/>
+    <var key="nielsenCombined.ad_iag_epi" value="{mediaProxy.entry.categories} - {mediaProxy.entry.name}" overrideFlashvar="true"/>
   </uiVars>
 </layout>
 
