--- a/modules/NielsenVideoCensus/tests/LongFormNielsenVideoCensusPluginFreeWheel.html
+++ b/modules/NielsenVideoCensus/tests/LongFormNielsenVideoCensusPluginFreeWheel.html
@@ -42,7 +42,7 @@ function jsKalturaPlayerTest( videoId ){
 preroll freewheel,<br /> 
 overlay at 5 sec <br />
 freewheel midroll at 10 sec and 13 seconds ( should send additional becon when resuming content playback ) <br /><br />
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<a href="?forceMobileHTML5"> Force Mobile HTML5 </a> for testing with desktop chrome and safari.
 <br />
 <object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" 
 allowNetworking="all" allowScriptAccess="always" height="333" width="400" xmlns:dc="http://purl.org/dc/terms/" 
@@ -65,7 +65,7 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/12924364504/wid/_243342/
       <Plugin id="statistics" width="0%" height="0%" includeInLayout="false"/>
       
       <Plugin 
-      	id="NielsenVideoCensus"
+      	id="nielsenVideoCensus"
       	path="http://www.kaltura.com/content/uiconf/ps/abc/kdp3/v3.5.33/plugins/NielsenVideoCensusPlugin.swf"
       	clientId="us-300437"            
       	videoCensusId="vc,c02"
