--- a/modules/NielsenVideoCensus/tests/ShortFromNielsenVideoCensus.html
+++ b/modules/NielsenVideoCensus/tests/ShortFromNielsenVideoCensus.html
@@ -62,7 +62,7 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/12924364503/wid/_243342/
       <Plugin id="statistics" width="0%" height="0%" includeInLayout="false"/>
       
       <Plugin 
-      	id="NielsenVideoCensus"
+      	id="nielsenVideoCensus"
       	path="http://www.kaltura.com/content/uiconf/ps/abc/kdp3/v3.5.33/plugins/NielsenVideoCensusPlugin.swf"
       	clientId="us-300437"
       	videoCensusId="vc,c02"
