--- a/modules/NielsenCombined/tests/NielsenCombinedPlayer.html
+++ b/modules/NielsenCombined/tests/NielsenCombinedPlayer.html
@@ -61,7 +61,7 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/12924364499/wid/_243342/
       <Plugin id="kalturaMix" width="0%" height="0%" includeInLayout="false" loadingPolicy="onDemand"/>
       <Plugin id="statistics" width="0%" height="0%" includeInLayout="false"/>
       
-      <Plugin id="NielsenCombined" 
+      <Plugin id="nielsenCombined" 
       	path="http://projects.kaltura.com/nu/NielsenVideoCensus.swf" 
       	clientId="us-502202" 
       	vcid="c15"
