synced case updates from r3409
git-svn-id: http://www.kaltura.org/kalorg/html5video/tags/1.6.0@3413 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/NielsenCombined/tests/IntegrationFreeWheelNielsen.html
+++ b/modules/NielsenCombined/tests/IntegrationFreeWheelNielsen.html
@@ -71,9 +71,7 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/1292436456/wid/_243342/u
       <Plugin id="kalturaMix" width="0%" height="0%" includeInLayout="false" loadingPolicy="onDemand"/>
       <Plugin id="statistics" width="0%" height="0%" includeInLayout="false"/>
       
-      <Plugin id="FreeWheel" 
-      	path="http://projects.kaltura.com/MichalR/kdp/plugins/freeWheelPlugin.swf"
-      	extensions="kdpExtension=http://projects.kaltura.com/MichalR/kdp/plugins/freeWheelAnalyticsExtension.swf"
+      <Plugin id="freeWheel" 
       	adManagerUrl="http://adm.fwmrm.net/p/release/latest-AS3/adm/dbg/AdManager.swf"
       	adManagerJsUrl="http://adm.fwmrm.net/p/release/latest-JS/adm/dbg/AdManager.js"
       	serverUrl="http://demo.v.fwmrm.net"
@@ -89,9 +87,8 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/1292436456/wid/_243342/u
       	provider="freewheel"
       />
       
-      <Plugin id="NielsenCombined" 
+      <Plugin id="nielsenCombined" 
 	    clientid="kg-98765-1"
-	    path="http://projects.kaltura.com/mdale/NielsenPlugin.swf"
 	    relativeTo="PlayerHolder"
 	    position="lastChild"
 	    includeInLayout="false"
