put attributes on their own line
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@3424 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/Comscore/tests/Comscore.html
+++ b/modules/Comscore/tests/Comscore.html
@@ -37,17 +37,27 @@ skinPath="/content/uiconf/kaltura/kmc/appstudio/kdp3/eagle/skin/v3.5.9/skin.swf"
       includeInLayout="false" />
 
 
-      <Plugin id="comscore" width="0" height="0"
-      includeInLayout="false" asyncInit="true"
+      <Plugin id="comscore" 
+      width="0"
+      height="0" 
+      includeInLayout="false" 
+      asyncInit="true"
       cTagsMap="http://projects.kaltura.com/ran/comscore/comscore.xml"
-      c2="3000032" c3="myDefaultString" c3attributeKey="name"
-      c3attributeValue="id" c3Value="{mediaProxy.entryMetadata.C3}"
-      c4="{configProxy.flashvars.comscoreC4}" c4attributeKey="url"
-      c4attributeValue="id" c4Value="{mediaProxy.entryMetadata.C4}"
-      c5attributeKey="name" c5attributeValue="id"
+      c2="3000032" 
+      c3="myDefaultString" 
+      c3attributeKey="name"
+      c3attributeValue="id" 
+      c3Value="{mediaProxy.entryMetadata.C3}"
+      c4="{configProxy.flashvars.comscoreC4}" 
+      c4attributeKey="url"
+      c4attributeValue="id" 
+      c4Value="{mediaProxy.entryMetadata.C4}"
+      c5attributeKey="name" 
+      c5attributeValue="id"
       c5Value="{mediaProxy.entryMetadata.C5}"
       c6="{mediaProxy.entryMetadata.SeriesName}|{mediaProxy.entryMetadata.Season}{mediaProxy.entryMetadata.Episode}|{mediaProxy.entry.name}"
-      path="/content/uiconf/abc/kdp/v3.5.7.7/plugins/comscore_v1/comscorePlugin.swf" />
+      path="/content/uiconf/abc/kdp/v3.5.7.7/plugins/comscore_v1/comscorePlugin.swf"
+      />
 
 
       <Plugin id="vast" preSequence="1" trackCuePoints="true"
