completed disney statistics plugin.
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@3451 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/DolStatistics/tests/DOL_Statistics.html
+++ b/modules/DolStatistics/tests/DOL_Statistics.html
@@ -3,7 +3,7 @@
 <head>
 <title>Disney Statistics Plugin</title>
 
-<script type="text/javascript" src="../../../../mwEmbedLoader.php?debug=true"></script>
+<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 <script>
 mw.setConfig('Kaltura.ServiceUrl', 'http://www.kaltura.co.cc' );
 mw.setConfig('Kaltura.CdnUrl', 'http://www.kaltura.co.cc' );
