* Changed EmbedPlayer.LoaderPath to LoadingSpinner.ImageUrl * Moved "LoadingSpinner.ImageUrl" default setting from EmbedPlayer/loader.js to loader.js
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@3458 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/ExternalResources.qunit.html
+++ b/modules/KalturaSupport/tests/ExternalResources.qunit.html
@@ -14,7 +14,7 @@
 <script type="text/javascript">	
 // Enable uiconf js which includes external resources 
 mw.setConfig('Kaltura.EnableEmbedUiConfJs', true);
-mw.setConfig('EmbedPlayer.LoaderPath', 'externalResources/loading.gif');
+mw.setConfig('LoadingSpinner.ImageUrl', 'externalResources/loading.gif');
 
 function jsKalturaPlayerTest( videoId ){
 	
