Support upper case kWidget calls updated leadwithHTML5 example
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@3582 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/LeadWithHTML5.html
+++ b/modules/KalturaSupport/tests/LeadWithHTML5.html
@@ -74,10 +74,10 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/1292436446/wid/_243342/u
 </object>
 <br><br>
 
-To avoid object tag representation you can use the kalturaIframeEmbed call: 
+To avoid object tag representation you can use the <b>kWidget.embed</b> call: 
 <div id="video" style="width:400px;height:330px;"></div>
 <script type="text/javascript">
-        kalturaIframeEmbed('video', {
+        KWidget.embed('video', {
             'wid' : '_243342',
             'uiconf_id' : '2877502',
             'entry_id' : '0_uka1msg4'
