fixed content length when sending 7 event added doctype to doubleClickPlayer ( IE9 ) cleaned up Captions CustomVars uiConf added NielsenCombined_DispatchEvent event
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@3631 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/NielsenCombined/tests/NielsenCombinedPlayer.html
+++ b/modules/NielsenCombined/tests/NielsenCombinedPlayer.html
@@ -95,6 +95,8 @@ function jsKalturaPlayerTest( videoId ){
 				equal( Math.floor( args[2] ), 15, "Seek target time is 15 seconds" );
 				equal( args[3], "content", "Seek includes content type" );
 				$( player ).unbind( 'NielsenCombined_DispatchEvent.seek');
+				// stop playback 
+				player.sendNotification( 'doPause' );
 				start();
 			});
 			// seek to 30 seconds: 
