added check for bindHelper when in flash added durationchange check before sending content duration
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@3640 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/NielsenCombined/tests/NielsenCombinedPlayer.html
+++ b/modules/NielsenCombined/tests/NielsenCombinedPlayer.html
@@ -106,9 +106,12 @@ function jsKalturaPlayerTest( videoId ){
 <script type="text/javascript">	
 kWidget.addReadyCallback( function( playerId ){
 	var player =  $('#' + playerId ).get(0);
-	player.bindHelper( 'NielsenCombined_DispatchEvent', function( event, args ){
-		$('#log').append( '<br><br>' + args.join(',<br>') );
-	});
+	// only html5 ( should change to a jsListener if we get the flash verison on this page as well)
+	if( player.bindHelper ){
+		player.bindHelper( 'NielsenCombined_DispatchEvent', function( event, args ){
+			$('#log').append( '<br><br>' + args.join(',<br>') );
+		});
+	}
 });
 </script>
 <!-- qunit-kaltura must come after qunit-bootstrap.js and after mwEmbedLoader.php and after any jsCallbackReady stuff-->
