use [0] instead of .get(0)
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@3653 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/NielsenCombined/tests/NielsenCombinedPlayer.html
+++ b/modules/NielsenCombined/tests/NielsenCombinedPlayer.html
@@ -14,7 +14,7 @@ function jsKalturaPlayerTest( videoId ){
 
 	var $iframe = $('#' + videoId + '_ifp').contents();
 	var iframeContext = window.frames['kaltura_player_ifp'];
-	var player =  $('#' + videoId ).get(0);
+	var player =  $('#' + videoId )[0];
 	
 	asyncTest("Player Ready", function(){
 		kalturaQunitWaitForPlayer(function(){
@@ -105,7 +105,7 @@ function jsKalturaPlayerTest( videoId ){
 </script>
 <script type="text/javascript">	
 kWidget.addReadyCallback( function( playerId ){
-	var player =  $('#' + playerId ).get(0);
+	var player =  $('#' + playerId )[0];
 	// only html5 ( should change to a jsListener if we get the flash verison on this page as well)
 	if( player.bindHelper ){
 		player.bindHelper( 'NielsenCombined_DispatchEvent', function( event, args ){
