use hd entry to better illustrate size changes
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@3708 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/standAloneTests/kWidget.getSources.html
+++ b/modules/KalturaSupport/standAloneTests/kWidget.getSources.html
@@ -3,13 +3,13 @@
 </head>
 <body>
 	<h3>Sample kWidget.getSources</h3>
-	partnerId : '243342', entryId: '0_uka1msg4'
+	partnerId : '243342', entryId: '0_c0r624gh'
 	<div id="sourceSet"></div>
 	<script src="kWidget.getSources.js"></script>
 	<script>
 		kWidget.getSources({
 			'partnerId': '243342',
-			'entryId': '0_uka1msg4',
+			'entryId': '0_c0r624gh',
 			'callback': function( sourceSet ){
 				var o = '';
 				for( var i in sourceSet ){
