--- a/modules/KalturaSupport/standAloneTests/kWidget.getSources.html
+++ b/modules/KalturaSupport/standAloneTests/kWidget.getSources.html
@@ -3,13 +3,13 @@
 </head>
 <body>
 	<h3>Sample kWidget.getSources</h3>
-	partnerId : '243342', entryId: '0_c0r624gh'
+	partnerId : '243342', entryId: '0_uka1msg4'
 	<div id="sourceSet"></div>
 	<script src="kWidget.getSources.js"></script>
 	<script>
 		kWidget.getSources({
 			'partnerId': '243342',
-			'entryId': '0_c0r624gh',
+			'entryId': '0_uka1msg4',
 			'callback': function( sourceSet ){
 				var o = '';
 				for( var i in sourceSet ){
