--- a/modules/KalturaSupport/tests/kWidget.embed.qunit.html
+++ b/modules/KalturaSupport/tests/kWidget.embed.qunit.html
@@ -5,49 +5,28 @@
 <script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
 <script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 <script type="text/javascript">	
+window.kWidgetCallbackWithID = false;
 function jsKalturaPlayerTest( videoId ){
 	
 	// Name this module
 	module( "kWidget Player" );
 
 	var $iframe = $('#' + videoId + '_ifp').contents();
-	var iframeContext = window.frames['kaltura_player_ifp'];
 	
 	test( "Iframe in DOM", function() {
 		ok( $('#' + videoId + '_ifp').length , 'iframe found' );
-		equal( typeof iframeContext, 'object', "iframe JavaScript context available" );
 	});
 
-	asyncTest("Iframe layout elements", function(){
+	asyncTest("Inline readyCallback fired", function(){
 		kalturaQunitWaitForPlayer(function(){
-			ok( $iframe.find('.play-btn-large').length, ".play-btn-large found" );
-			ok( $iframe.find('.play-btn').length, ".play-btn found" );
+			equal( window.kWidgetCallbackWithID, videoId, " ReadyCallback fired with id:" + videoId );
 			start();
 		});
 	});
-	asyncTest("Iframe config", function(){
-		equal( iframeContext.mw.getConfig('Kaltura.IframeRewrite' ), false, "Kaltura.IframeRewrite" ); 
-		equal( iframeContext.mw.getConfig('Mw.LogPrepend'), 'iframe:', "Mw.LogPrepend ");
-		// Test page context config: 
-		equal( iframeContext.mw.getConfig('EmbedPlayer.EnableIpadHTMLControls'), true, 'EmbedPlayer.EnableIpadHTMLControls' );
-		start();
-	});
 }
-function runInlinePlayerReadyTests(){
-	
+function readyCallbackFired( playerId ){
+	window.kWidgetCallbackWithID = playerId;
 }
-</script>
-<script>
-	/*
-	function jsCallbackReady( playerId ){
-		var kdp = $( '#' + playerId )[0];
-		kdp.addJsListener( 'playerSeekStart', 'onPlayerSeekStart')
-	}
-	function onPlayerSeekStart( playerId ){
-		var kdp = $( '#' + playerId )[0];
-		alert( kdp.evaluate( '{video.player.currentTime}' ) );
-	}
-	*/
 </script>
 <!-- qunit-kaltura must come after qunit-bootstrap.js and after mwEmbedLoader.php and after any jsCallbackReady stuff-->
 <script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script>
@@ -57,7 +36,7 @@ function runInlinePlayerReadyTests(){
 <a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
 <br />
 
-<div id="myVideoTarget" style="width:400px;height:300px;">
+<div id="myVideoTarget" style="width:400px;height:330px;">
 	<!--  SEO and video metadata go here -->
 	<span property="dc:description" content="test folgers coffe"></span>
 	<span property="media:title" content="FolgersCoffe.mpeg"></span>
@@ -67,10 +46,16 @@ function runInlinePlayerReadyTests(){
 <script>
 	kWidget.embed({
 		'targetId': 'myVideoTarget',
+		'wid': '_243342',
+		'uiconf_id' : '2877502',
+		'entry_id' : '0_uka1msg4',
+		'flashvars':{
+			'externalInterfaceDisabled' : false
+		},
 		'readyCallback': function( playerId ){
-			console.log( "kWidget player ready: " + playerId )
-			runInlinePlayerReadyTests( playerId );
-		};
+			console.warn( "kWidget player ready: " + playerId );
+			readyCallbackFired( playerId );
+		}
 	})
 </script>
 
