minor test desc change
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@3789 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/kWidget.embed.qunit.html
+++ b/modules/KalturaSupport/tests/kWidget.embed.qunit.html
@@ -29,7 +29,7 @@ function jsKalturaPlayerTest( videoId ){
 	
 	function testAutoPlay(){
 		test("AutoPlay flashvar passing", function(){
-			ok( kdp.evaluate('{configProxy.flashvars.autoPlay}') , 'AutoPlay flashvar present');
+			ok( kdp.evaluate('{configProxy.flashvars.autoPlay}') , 'AutoPlay flashvar set');
 		});
 	}
 }
