--- a/modules/KalturaSupport/tests/kWidget.embed.qunit.html
+++ b/modules/KalturaSupport/tests/kWidget.embed.qunit.html
@@ -68,6 +68,9 @@ function readyCallbackFired( playerId ){
 		}
 	})
 </script>
+<p><p>
+<b> This script takes 10 second to load </b>
+<script type="text/javascript" src="http://cdnsecakmi.kaltura.com/apis/stagingHtml5lib/services.php?service=sleepTest"></script>
 
 </body>
 </html>
