fixed sleepTest url
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@3807 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/kWidget.embed.qunit.html
+++ b/modules/KalturaSupport/tests/kWidget.embed.qunit.html
@@ -70,7 +70,7 @@ function readyCallbackFired( playerId ){
 </script>
 <p><p>
 <b> This script takes 10 second to load </b>
-<script type="text/javascript" src="http://cdnsecakmi.kaltura.com/apis/stagingHtml5lib/services.php?service=sleepTest"></script>
+<script type="text/javascript" src="http://cdnakmi.kaltura.org/apis/stagingHtml5lib/services.php?service=sleepTest"></script>
 
 </body>
 </html>
