--- a/modules/KalturaSupport/tests/kWidget.embed.qunit.html
+++ b/modules/KalturaSupport/tests/kWidget.embed.qunit.html
@@ -69,9 +69,12 @@ function readyCallbackFired( playerId ){
 	})
 </script>
 <p><p>
-<!-- 
-<b> This script takes 10 second to load </b>
-<script type="text/javascript" src="http://cdnakmi.kaltura.org/apis/stagingHtml5lib/services.php?service=sleepTest&1"></script>
- -->
+<b> This script takes 1 second to load </b>
+<script type="text/javascript" src="../../../services.php?service=sleepTest&id=0"></script>
+<script type="text/javascript" src="../../../services.php?service=sleepTest&id=1"></script>
+<script type="text/javascript" src="../../../services.php?service=sleepTest&id=2"></script>
+<script type="text/javascript" src="../../../services.php?service=sleepTest&id=3"></script>
+<script type="text/javascript" src="../../../services.php?service=sleepTest&id=4"></script>
+
 </body>
 </html>
